--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
 						<hr size="">
 						<div>
 							<p class="works-left">説明</p>
-		          <p class="works-right">個人が簡単なバイクのブログを作ることができ、 また他のユーザーの投稿を見て共有したりできます。 個人でバイクブログを作っている方はよくいるかもしれませんが、 そのブログを集めてひとつのサイトに集約しすることで、 それぞれのバイクLifeを見たユーザーが新たな発見や楽しみ方を知るきっかけになるのではないかと考えています。後々は、このサイトを通じて知り合った方がツーリングに行けたり 趣味のつながりを広げるきっかけも作りたいという思いもあります。なので最終的にはブログから、バイクツーリングマッチングサイトにも発展させていけたらと考えています。</p>
+		          <p class="works-right">個人が簡単なバイクのブログを作ることができ、 また他のユーザーの投稿を見て共有したりできます。 個人でバイクブログを作っている方はよくいるかもしれませんが、 そのブログを集めてひとつのサイトに集約しすることで、 それぞれのバイクLifeを見たユーザーが新たな発見や楽しみ方を知るきっかけになるのではないかと考えています。後々は、このサイトを通じて知り合った方がツーリングに行けたり 趣味のつながりを広げるきっかけも作りたいという思いもあります。なので最終的にはブログから、バイクツーリングマッチングサイトにも発展させていけたらと考えています。現在投稿内容と、写真が一致しないという不具合を発見し、修正中です。</p>
 						</div>
 						<hr size="">
 						<div>
